# codemosaic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  policy.sample.yaml  pyproject.toml
.github/: RELEASE_TEMPLATE.md
codemosaic/: __main__.py  audit.py  bundles.py  cli.py  crypto.py  integrity.py  key_management.py  leakage.py  mapping.py  models.py  patching.py  policy.py  presets.py  runs.py  scanning.py  segmentation.py  workspace.py  workspace_setup.py
docs/: architecture.md  brainstorm.md  ci-governance.md  demo-walkthrough.md  internal-ai-coding-playbook.md  key-management.md  landing-page.md  leakage-gate.md  release-playbook.md  secure-workspace-example.md  threat-model.md  vscode-extension.md
presets/: balanced-ai-gateway.yaml  enterprise-core-ai-gateway.yaml  public-sdk-ai-gateway.yaml  strict-ai-gateway.yaml
scripts/: bootstrap_repository.py  build_site.py  generate_release_assets.py  package_vscode_extension.py  run_demo_workflow.py  run_secure_onboarding_demo.py
tests/: test_bootstrap_repository.py  test_bundles.py  test_ci_examples.py  test_cli_leakage_gate.py  test_cli_policy_init.py  test_cli_providers.py  test_cli_rekey_runs.py  test_cli_segmentation.py  test_cli_workspace_setup.py  test_demo_workflow.py  test_jsts_masking.py  test_key_management.py  test_key_registry.py  test_leakage.py  test_mapping_crypto.py  test_mapping_encryption.py  test_mapping_integrity.py  test_masking.py  test_patching.py  test_policy.py  test_policy_presets.py  test_release_assets.py  (+10 more)
(+25 files in other folders)
