[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemosaic"
version = "0.1.0"
description = "Local-first code privacy gateway for external AI coding tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
codemosaic = "codemosaic.cli:main"

[tool.setuptools]
include-package-data = true
